--- a/tcf_website/static/reviews/review_stats.css
+++ b/tcf_website/static/reviews/review_stats.css
@@ -1,18 +1,13 @@
-.large-stats-container {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
 .large-stats {
     padding-top: 15px;
     padding-bottom: 10px;
-    background-color: white;
-    text-align: center;
-    display: block;
-    margin-left: 1px;
-    width: 33.33%
 }
 
-.large-stats-number {
-    color: var(--accent-color);
+.large-stats h2{
+    font-size: 16px;
+}
+@media (min-width: 768px) {
+  .large-stats h2{
+      font-size: 20px;
+  }
 }
