--- a/tcf_website/templates/reviews/review_stats.html
+++ b/tcf_website/templates/reviews/review_stats.html
@@ -1,16 +1,16 @@
 <div class="large-stats-container container-lg">
-    <div class="d-flex">
-        <div class="col-xs-4 large-stats">
-            <h3>Total Written</h3>
-            <h1 class="large-stats-number">{{ total_reviews_written }}</h1>
+    <div class="row px-3 text-center">
+        <div class="col-sm large-stats card">
+            <h2>Total Written</h2>
+            <h3 class="text-tcf-orange">{{ total_reviews_written }}</h3>
         </div>
-        <div class="col-xs-4 large-stats">
-            <h3>Total Upvotes Received</h3>
-            <h1 class="large-stats-number">{{ total_review_upvotes }}</h1>
+        <div class="col-sm large-stats card">
+            <h2>Upvotes Received</h2>
+            <h3 class="text-tcf-orange">{{ total_review_upvotes }}</h3>
         </div>
-        <div class="col-xs-4 large-stats">
-            <h3>Average Rating</h3>
-            <h1 class="large-stats-number">{{ average_review_rating }}</h1>
+        <div class="col-sm large-stats card">
+            <h2>Average Rating</h2>
+            <h3 class="text-tcf-orange">{{ average_review_rating }}</h3>
         </div>
     </div>
 </div>
