--- a/tcf_website/templates/reviews/review.html
+++ b/tcf_website/templates/reviews/review.html
@@ -1,7 +1,8 @@
 <div id="review{{review.id}}" class="review card mb-2">
     <div class="card-body text-left">
         <div class="row">
-            <div class="col-2 col-lg-1 vote-container d-none d-md-flex flex-column justify-content-center align-items-center">
+            <!-- Review upvote/downvote panel -->
+            <div class="vote-container col-2 col-lg-1 d-none d-md-flex flex-column justify-content-center align-items-center">
                 <!--Voting logic is implemented in the <script> tag of reviews.html-->
                 <a class="upvote {% if review.user_vote == 1 %}active{% endif %}" href="{% url 'login' %}" id="upvote{{review.id}}">
                     <i class="fa fa-angle-up fa-fw"></i>
@@ -11,29 +12,37 @@
                     <i class="fa fa-angle-down fa-fw"></i>
                 </a>
             </div>
-            <div class="col-xs-12 col-md-10 col-lg-11">
-                <div class="d-flex flex-row align-items-center">
-                    <div>
-                        {% if profile %}
-                        <div class="d-flex">
-                            <div>
-                            <a class="review-header" href="{% url 'course_instructor' course_id=review.course.pk instructor_id=review.instructor.pk %}">
-                                <p><strong>{{ review.course }}</strong> — {{ review.instructor.full_name }}</p>
-                            </a>
-                            </div>
-                            <div class="ml-auto">
-                            <!-- Edit functionality is TBD -->
-                            <!-- <a class="review-edit btn btn-sm btn-primary" href="#">
-                                <i class="fas fa-pencil-alt"></i> Edit
-                            </a> -->
-                            </div>
+
+            <!-- Review Main Content -->
+            <div class="review-content col-xs-12 col-md-10 col-lg-11">
+                <!-- Review header content (subject, actions, text) -->
+                <div class="review-info">
+                    {% if profile %}
+                    <!-- Subject and Edit/Delete actions show only on profile page -->
+                    <div class="d-flex">
+                        <div class="review-header">
+                          <a href="{% url 'course_instructor' course_id=review.course.pk instructor_id=review.instructor.pk %}">
+                              <p><strong>{{ review.course }}</strong> — {{ review.instructor.full_name }}</p>
+                          </a>
                         </div>
-                        {% endif %}
-                        <p class="card-text" style="white-space: pre-line;">{{ review.text }}</p>
+                        <div class="review-actions ml-auto">
+                          <!-- Edit functionality is TBD -->
+                          <!-- <a class="review-edit btn btn-sm btn-primary" href="#">
+                              <i class="fas fa-pencil-alt"></i> Edit
+                          </a> -->
+                          <button class="review-delete btn btn-sm btn-outline-danger" type="button"
+                                  data-toggle="modal" data-target="#deleteReviewModal{{review.id}}">
+                            <i class="fa fa-trash-o"></i> Delete
+                          </button>
+                          {% include "reviews/delete_confirm_modal.html" with review_id=review.id %}
+                        </div>
                     </div>
+                    {% endif %}
+                    <p class="card-text" style="white-space: pre-line;">{{ review.text }}</p>
                 </div>
 
-                <div class="d-flex justify-content-between align-items-end flex-wrap">
+                <!-- Review Ratings -->
+                <div class="review-ratings d-flex justify-content-between align-items-end flex-wrap">
                     <div class="d-flex">
                         <div>
                             <strong>
