--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -38,8 +38,8 @@
                                 <i class="fas fa-user"></i>&nbsp;Instructor
                             </div>
                             <div class="info-bar">
-                                <div class="progress p-0 m-0">
-                                    <div class="progress-bar instructor-bar p-0 m-0" style="width: 0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar instructor-bar" style="width: 0%"></div>
                                 </div>
                             </div>
                             <div class="info-num instructor-num">
@@ -51,8 +51,8 @@
                                 <i class="far fa-smile-beam"></i>&nbsp;Enjoyability
                             </div>
                             <div class="info-bar">
-                                <div class="progress p-0 m-0">
-                                    <div class="progress-bar fun-bar p-0 m-0" style="width:0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar fun-bar" style="width:0%"></div>
                                 </div>
                             </div>
                             <div class="info-num fun-num">
@@ -64,8 +64,8 @@
                                 <i class="fas fa-dumbbell"></i>&nbsp;Difficulty
                             </div>
                             <div class="info-bar">
-                                <div class="progress  p-0 m-0">
-                                    <div class="progress-bar difficulty-bar p-0 m-0" style="width:0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar difficulty-bar" style="width:0%"></div>
                                 </div>
                             </div>
                             <div class="info-num difficulty-num">
@@ -77,8 +77,8 @@
                                 <i class="fas fa-thumbs-up"></i>&nbsp;Recommend
                             </div>
                             <div class="info-bar">
-                                <div class="progress  p-0 m-0">
-                                    <div class="progress-bar recommend-bar p-0 m-0" style="width:0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar recommend-bar" style="width:0%"></div>
                                 </div>
                             </div>
                             <div class="info-num recommend-num">
@@ -98,8 +98,8 @@
                                 <i class="fas fa-book"></i>&nbsp;Reading
                             </div>
                             <div class="info-bar">
-                                <div class="progress  p-0 m-0">
-                                    <div class="progress-bar reading-bar p-0 m-0" style="width:0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar reading-bar" style="width:0%"></div>
                                 </div>
                             </div>
                             <div class="info-num reading-num">
@@ -111,8 +111,8 @@
                                 <i class="fas fa-pencil-alt"></i>&nbsp;Writing
                             </div>
                             <div class="info-bar">
-                                <div class="progress  p-0 m-0">
-                                    <div class="progress-bar writing-bar p-0 m-0" style="width:0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar writing-bar" style="width:0%"></div>
                                 </div>
                             </div>
                             <div class="info-num writing-num">
@@ -124,8 +124,8 @@
                                 <i class="fas fa-user-friends"></i>&nbsp;Groupwork
                             </div>
                             <div class="info-bar">
-                                <div class="progress  p-0 m-0">
-                                    <div class="progress-bar group-bar p-0 m-0" style="width:0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar group-bar" style="width:0%"></div>
                                 </div>
                             </div>
                             <div class="info-num group-num">
@@ -137,8 +137,8 @@
                                 <i class="fas fa-flask"></i>&nbsp;Other
                             </div>
                             <div class="info-bar">
-                                <div class="progress p-0 m-0">
-                                    <div class="progress-bar homework-bar p-0 m-0" style="width: 0%"></div>
+                                <div class="progress">
+                                    <div class="progress-bar homework-bar" style="width: 0%"></div>
                                 </div>
                             </div>
                             <div class="info-num homework-num">
