Add login modal

--- a/tcf_website/templates/base/account_wall.html
+++ b/tcf_website/templates/base/account_wall.html
@@ -3,7 +3,10 @@
     <div class="row bg-white text-center p-5">
         <div class="col">
             <h3 class="h4 text-tcf-orange">Sign in to view this content!</h3>
-            <a class="btn btn-primary" href="{% url 'login' %}">Sign in</a>
+            <a class="btn btn-primary" href="#loginModal" data-toggle="modal"
+              data-target="#loginModal">
+              Sign in
+            </a>
         </div>
     </div>
 </div>
