--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -30,6 +30,9 @@
 <body class="body">
   {% block body %}{% endblock %}
 
+  <!-- Login modal -->
+  {% include "login/login_modal.html" %}
+
   <!-- Bootstrap core JavaScript -->
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
           integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
