--- a/tcf_website/templates/login/login.html
+++ b/tcf_website/templates/login/login.html
@@ -1,13 +1,23 @@
-{% extends "login/login_base.html" %}
+{% extends "base/base.html" %}
 {% load static %}
 
-{% block login_content %}
+{% block content %}
 
-<h2 class="card-title" style="margin-top: 15px;">Welcome to theCourseForum!</h2>
-<h5 class="card-text mb-3">Please log in to continue.</h5>
-{% if error %}
-    <p style="color: red;" class="card-text">There was an error logging you in. Please make sure you're using an @virginia.edu email address.</p>
-{% endif %}
-{% include "login/login_button.html" %}
+<div class="container-fluid col-lg-9 col-md-11 mx-auto pt-4">
+  <div class="row">
+    <div class="col bg-white pb-4 pt-5">
+        {% include "about/logo-tagline.html" %}
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-lg bg-tcf-indigo p-5 text-center">
+        <div class="card-body text-white">
+            <h2 class="h3 card-title">Welcome to theCourseForum!</h2>
+            <p class="card-text mb-3">Please log in to continue.</p>
+            {% include "login/login_button.html" %}
+        </div>
+    </div>
+  </div>
+</div>
 
 {% endblock %}
