--- a/tcf_website/templates/login/login_button.html
+++ b/tcf_website/templates/login/login_button.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'login/login_button.css' %}" />
 {% endblock %}
 
-<div class="login-button-container">
+<div class="login-button-container m-0">
     <a class="login-button-wrapper" href="{% url 'social:begin' 'google-oauth2' %}">
         <button class="login-button"></button>
     </a>
