Fix textarea defaults in review form

--- a/tcf_website/templates/reviews/new_review.html
+++ b/tcf_website/templates/reviews/new_review.html
@@ -55,8 +55,7 @@
             Tell us more about the course and instructor</h2>
           <div class="form-group col mb-3">
             <textarea class="form-control" id="reviewText" name="reviewText" rows="5"
-                      placeholder="(Aim for 3 sentences or more!)" minlength="100" maxlength="5000">
-            </textarea>
+                      placeholder="(Aim for 3 sentences or more!)" minlength="100" maxlength="5000"></textarea>
           </div>
         </div>
         <hr>
