Moved searchbar from base to search folder

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -13,7 +13,7 @@
     </a>
 
     <!-- tCF search -->
-    {% include "base/searchbar.html" %}
+    {% include "search/searchbar.html" %}
 
     <!-- tCF navbar toggler -->
     <button class="navbar-toggler menu" id="menu-toggle">
