--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="col-md-10 col-lg-8 col-xl-7 mx-auto">
-        {% include "base/searchbar.html" %}
+        {% include "search/searchbar.html" %}
       </div>
     </div>
   </header>
