--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -1,27 +1,39 @@
-<div class="tcf-toolbar btn-toolbar justify-content-center justify-content-md-between mb-3 text-center text-md-left" role="toolbar" aria-label="Toolbar with button groups">
-    <div class="btn-group mr-2" role="group" aria-label="Breadcrumbs">
-        <ol class="breadcrumb mb-md-0">
-            {% for text, url, active in breadcrumbs %}
-                <li class="breadcrumb-item {% if active %}active{% endif %}">{% if not active %}<a href="{{ url }}">{{ text }}</a>{% else %}{{ text }}{% endif %}
-                </li>
-            {% endfor %}
-        </ol>
+<div class="tcf-toolbar">
+    <div class="btn-toolbar justify-content-center text-center text-md-left px-3"
+         role="toolbar" aria-label="Toolbar with button groups">
+        <!-- Breadcrumbs -->
+        <div id="breadcrumbs" class="rounded bg-white mr-md-auto mb-3"
+             role="toolbar" aria-label="Breadcrumbs">
+            <ol class="breadcrumb bg-white mb-0">
+                {% for text, url, active in breadcrumbs %}
+                    <li class="breadcrumb-item {% if active %}active{% endif %}">
+                      {% if not active %}<a href="{{ url }}">{{ text }}</a>
+                      {% else %}{{ text }}{% endif %}
+                    </li>
+                {% endfor %}
+            </ol>
+        </div>
+          <!-- Filter buttons -->
+          {% if active_text %}
+          <div id="filterButtons" class="btn-group btn-group-sm ml-md-auto mb-3"
+               role="toolbar" aria-label="Show/Hide All Semesters">
+              <button type="button" id="hide-btn" class="btn btn-outline-primary active">{{ active_text }}</button>
+              <button type="button" id="show-btn" class="btn btn-outline-primary"> {{ hidden_text }} </button>
+          </div>
+          {% endif %}
     </div>
-    {% if active_text %}
-    <div class="btn-group btn-group-sm" role="toolbar" aria-label="Show/Hide All Semesters">
-        <button type="button" id="hide-btn" class="btn btn-outline-primary active">{{ active_text }}</button>
-        <button type="button" id="show-btn" class="btn btn-outline-primary"> {{ hidden_text }} </button>
-    </div>
-    {% endif %}
-</div>
 
-<div class="d-flex justify-content-center justify-content-lg-end mt-3 mb-3" role="toolbar" aria-label="Toolbar with button groups">
-    {% if sorting %}
-    <div class="btn-group btn-group-sm" role="group" aria-label="Sorting Buttons">
-        <button type="button" id="number-sort-btn" class="btn btn-outline-primary active">Course ID</button>
-        <button type="button" id="rating-sort-btn" class="btn btn-outline-primary">Rating</button>
-        <button type="button" id="diff-sort-btn" class="btn btn-outline-primary">Difficulty</button>
-        <button type="button" id="gpa-sort-btn" class="btn btn-outline-primary">GPA</button>
+    <div class="d-flex justify-content-center justify-content-md-end mb-3 px-3"
+         role="toolbar" aria-label="Toolbar with button groups">
+        <!-- Sorting buttons -->
+        {% if sorting %}
+        <div id="sortButtons" class="btn-group btn-group-sm"
+             role="toolbar" aria-label="Sorting Buttons">
+            <button type="button" id="number-sort-btn" class="btn btn-outline-primary active">Course ID</button>
+            <button type="button" id="rating-sort-btn" class="btn btn-outline-primary">Rating</button>
+            <button type="button" id="diff-sort-btn" class="btn btn-outline-primary">Difficulty</button>
+            <button type="button" id="gpa-sort-btn" class="btn btn-outline-primary">GPA</button>
+        </div>
+        {% endif %}
     </div>
-    {% endif %}
 </div>
