--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -15,17 +15,20 @@
 
         {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
-        <div class="d-flex flex-column my-3 mt-md-5">
-            <div class="d-md-flex justify-content-center">
-                <h1 class="mr-md-3" style="white-space: nowrap">{{ course.code }} |</h1>
-                <h1 class="mr-md-3">{{ course.title }}</h1>
+        <div class="course-instructor-header my-3 mt-md-5 px-3">
+            <div class="d-flex flex-column justify-content-left justify-content-sm-center">
+                <div class="d-md-flex">
+                    <h1 class="mr-md-3 text-nowrap">{{ course.code }}</h1>
+                    <h2 class="h1 mr-md-3">{{ course.title }}</h2>
+                </div>
+                <h3 class="font-weight-light text-tcf-orange">
+                  <a href="{% url 'instructor' instructor_id=instructor.id %}">
+                    {{ instructor.full_name }}</a>
+                </h3>
             </div>
-            <h2 class="text-center mb-3"><a
-                    href="{% url 'instructor' instructor_id=instructor.id %}">{{ instructor.full_name }}</a></h2>
         </div>
 
-
-        <div class="grades-ratings-container mb-5 ">
+        <div class="grades-ratings-container px-3">
             <div class="ratings-container">
                 <div class="ratings-row">
                     <div class="rating-card">
@@ -148,6 +151,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="grades-container">
                 <div class="chart-container d-flex align-items-center justify-content-center">
                     <canvas width="100%" height="100%" id="myChart"></canvas>
@@ -157,32 +161,32 @@
                     <p class="students-text"> &mdash; Students</p>
                 </div>
             </div>
-
         </div>
 
-
-        <div class="dropdown">
-            <button id="review-sort-select" class="btn btn-secondary dropdown-toggle" type="button" id="sortOptions"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-            <div class="dropdown-menu" aria-labelledby="sortOptions">
-                <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
-                    Helpful
-                </button>
-                <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">Most
-                    Recent
-                </button>
-                <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                    Highest
-                    Rating
-                </button>
-                <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                    Lowest
-                    Rating
-                </button>
+        <div class="reviews-container mb-5 px-3">
+            <div class="reviews-toolbar d-flex">
+                <div class="ml-auto dropdown btn-group">
+                    <button class="btn bg-white" disabled>Sort by</button>
+                    <button id="review-sort-select" class="btn btn-primary dropdown-toggle" type="button" id="sortOptions"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                    <div class="dropdown-menu" aria-labelledby="sortOptions">
+                        <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                            Most Helpful
+                        </button>
+                        <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                            Most Recent
+                        </button>
+                        <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                            Highest Rating
+                        </button>
+                        <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                            Lowest Rating
+                        </button>
+                    </div>
+                </div>
             </div>
+            {% include "reviews/reviews.html" with reviews=reviews %}
         </div>
-
-        {% include "reviews/reviews.html" with reviews=reviews %}
     </div>
 {% endblock %}
 
