--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -23,22 +23,22 @@
     <!-- tCF profile dropdown -->
     <div class="account-settings">
       {% if user.is_authenticated %}
-      <div class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
-          Hey, {{user.first_name}}!
-        </a>
-        <div class="dropdown-menu settings" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
-          <a class="dropdown-item" href="{% url 'reviews' %}">My Reviews</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+        <div class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown">
+            Hey, {{user.first_name}}!
+          </a>
+          <div class="dropdown-menu settings" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'profile' %}">My Profile</a>
+            <a class="dropdown-item" href="{% url 'reviews' %}">My Reviews</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+          </div>
         </div>
-      </div>
-      {% else %}
-      <div class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">Sign In</a>
-      </div>
-    {% endif %}
+        {% else %}
+        <div class="nav-item">
+          <a class="nav-link" href="#loginModal" data-toggle="modal">Sign In</a>
+        </div>
+      {% endif %}
     </div>
   </nav>
 </header>
