--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -39,7 +39,7 @@
         </div>
         {% else %}
         <div class="nav-item">
-          <a class="nav-link" href="{% url 'login' %}">Sign In</a>
+          <a class="nav-link" href="#loginModal" data-toggle="modal">Sign In</a>
         </div>
       {% endif %}
       </div>
