Added team application & review drive banner

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -15,6 +15,11 @@
     <!-- tCF search -->
     {% include "base/searchbar.html" %}
 
+    <!-- tCF event banner -->
+    <a id="event-banner" class="btn btn-outline-success mx-2" href="">
+      Team applications are live!
+    </a>
+
     <!-- tCF navbar toggler -->
     <button class="navbar-toggler menu" id="menu-toggle">
       <span class="navbar-toggler-icon"></span>
