--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -9,6 +9,7 @@
 
 {% block content %}
 <div class="browse container">
+    {% include "common/notification.html" %}
     <h2 class="font-weight-light">Browse by Department</h2>
     <div class="schools text-left">
 
