--- a/tcf_website/templates/common/notification.html
+++ b/tcf_website/templates/common/notification.html
@@ -1,4 +1,4 @@
-<div class="alert alert-success alert-dismissible fade show" role="alert">
+<div class="alert alert-info alert-dismissible fade show" role="alert">
   <h4 class="alert-heading">Review Drive - Enter to win!</h4>
   <p>
     Our Fall 2020 review drive is from 12/7 til 12/25.
