--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -2,7 +2,7 @@
     <div class="btn-toolbar justify-content-center text-center text-md-left px-3"
          role="toolbar" aria-label="Toolbar with button groups">
         <!-- Breadcrumbs -->
-        <div id="breadcrumbs" class="rounded bg-white mr-md-auto mb-3"
+        <div id="breadcrumbs" class="rounded bg-white col-md-8 mr-md-auto mb-3"
              role="toolbar" aria-label="Breadcrumbs">
             <ol class="breadcrumb bg-white mb-0">
                 {% for text, url, active in breadcrumbs %}
