Linked application banner to google form

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -13,8 +13,8 @@
     </a>
 
     <!-- tCF event banner -->
-    <a id="event-banner" class="btn btn-outline-success mx-2" href="">
-      Team applications are live!
+    <a id="event-banner" class="btn btn-outline-info mr-3" href="https://docs.google.com/forms/d/e/1FAIpQLSdVYuz0LzaHwQotf_utqRUIlSDJpctyCGdDbkXLRNwiCMqH6Q/viewform?usp=sf_link">
+      Apply to our team!
     </a>
 
     <!-- tCF search -->
