Added team application & review drive banners (#313)
* Added team application & review drive banner

* Linked application banner to google form

Co-authored-by: Alex Shen <shen.alexander@gmail.com>

--- a/tcf_website/templates/base/navbar.html
+++ b/tcf_website/templates/base/navbar.html
@@ -12,6 +12,11 @@
       <img class="logo" src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum home">
     </a>
 
+    <!-- tCF event banner -->
+    <a id="event-banner" class="btn btn-outline-info mr-3" href="https://docs.google.com/forms/d/e/1FAIpQLSdVYuz0LzaHwQotf_utqRUIlSDJpctyCGdDbkXLRNwiCMqH6Q/viewform?usp=sf_link">
+      Apply to our team!
+    </a>
+
     <!-- tCF search -->
     {% include "base/searchbar.html" %}
 
