--- a/tcf_website/templates/common/notification.html
+++ b/tcf_website/templates/common/notification.html
@@ -1,4 +1,5 @@
-<div class="alert alert-info alert-dismissible fade show" role="alert">
+<div id="notification-panel" role="alert"
+     class="alert alert-info alert-dismissible text-left fade show">
   <h4 class="alert-heading">Review Drive - Enter to win!</h4>
   <p>
     Our Fall 2020 review drive is from 12/7 til 12/25.
@@ -6,7 +7,13 @@
     into our sweepstakes for <b>four $25 gift cards!</b>
   </p>
   <hr>
-  <p class="mb-0">To enter, write a review for any class with the hashtag <b>#tCFfall20</b>!</p>
+  <p class="mb-0 text-inline">
+    To enter, write a review for any class with the hashtag <b>#tCFfall20</b>!
+    <a href="{% url 'new_review' %}" class="btn btn-sm btn-info ml-2">
+      Go Review <i class="fa fa-arrow-right" aria-hidden="true"></i>
+    </a>
+  </p>
+
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
