--- a/tcf_website/templates/common/notification.html
+++ b/tcf_website/templates/common/notification.html
@@ -8,7 +8,7 @@
   </p>
   <hr>
   <p class="mb-0 text-inline">
-    To enter, write a review for any class with the hashtag <b>#tCFfall20</b>!
+    To enter, write a review for any class and put the hashtag <b>#tCF2020</b> in the description!
     <a href="{% url 'new_review' %}" class="btn btn-sm btn-info ml-2">
       Go Review <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </a>
