--- a/tcf_website/static/course/course_professor.css
+++ b/tcf_website/static/course/course_professor.css
@@ -115,7 +115,7 @@
     padding: 0;
 }
 .info-bar .progress-bar {
-    background-color: #56679d;
+    background-color: var(--secondary-color);
     margin: 0;
     padding: 0;
 }
