--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 
-    <div class="course-professor container">
+    <div class="course-professor container px-0">
 
         {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
@@ -42,7 +42,7 @@
                   <!-- Semester last taught -->
                   <div class="ml-auto btn-group">
                     <button class="btn bg-white disabled">Last taught</button>
-                    <button class="btn bg-tcf-orange text-white">{{ semester_last_taught }}</button>
+                    <button class="btn bg-tcf-blue text-white">{{ semester_last_taught }}</button>
                   </div>
                 </div>
             </div>
@@ -184,24 +184,33 @@
         </div>
 
         <div class="reviews-container mb-5 px-3">
-            <div class="reviews-toolbar d-flex">
-                <div class="ml-auto dropdown btn-group">
-                    <button class="btn bg-white" disabled>Sort by</button>
-                    <button id="review-sort-select" class="btn btn-primary dropdown-toggle" type="button" id="sortOptions"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                    <div class="dropdown-menu" aria-labelledby="sortOptions">
-                        <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                            Most Helpful
-                        </button>
-                        <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                            Most Recent
-                        </button>
-                        <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                            Highest Rating
-                        </button>
-                        <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                            Lowest Rating
-                        </button>
+            <div class="reviews-toolbar d-flex flex-md-row flex-column justify-content-left justify-content-md-center">
+                <div class="reviews-header d-inline-flex">
+                    <h3 class="h2">{{ reviews|length }} Comments</h3>
+
+                </div>
+                <div class="ml-auto">
+                    <a href="{% url 'new_review' %}" class="btn bg-tcf-orange text-white mr-4">
+                      <i class="fa fa-plus" aria-hidden="true"></i> Add your review!
+                    </a>
+                    <div class="dropdown btn-group">
+                        <button class="btn bg-white" disabled>Sort by</button>
+                        <button id="review-sort-select" class="btn btn-primary dropdown-toggle" type="button" id="sortOptions"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                        <div class="dropdown-menu" aria-labelledby="sortOptions">
+                            <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                Most Helpful
+                            </button>
+                            <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                Most Recent
+                            </button>
+                            <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                Highest Rating
+                            </button>
+                            <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                Lowest Rating
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
