Add new review button on my reviews page, list profs last name first

--- a/tcf_website/templates/reviews/review_stats.html
+++ b/tcf_website/templates/reviews/review_stats.html
@@ -1,5 +1,5 @@
 <div class="large-stats-container container-lg">
-    <div class="row px-3 text-center">
+    <div class="row text-center">
         <div class="col-sm large-stats card">
             <h2>Total Written</h2>
             <h3 class="text-tcf-orange">{{ total_reviews_written }}</h3>
