--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -11,38 +11,48 @@
 
 {% block content %}
 
-    <div class="course-professor container px-0">
+    <div class="course-professor container text-left px-0">
 
         {% include "common/toolbar.html" with breadcrumbs=breadcrumbs %}
 
         <div class="course-instructor-header my-3 mt-md-5 px-3">
-            <div class="d-flex flex-column justify-content-left justify-content-sm-center">
-                <div class="d-md-flex align-items-baseline">
+            <div class="d-flex flex-column">
+                <div class="course-title d-md-flex align-items-baseline">
                     <h1 class="mr-md-3 text-nowrap">{{ course.code }}</h1>
                     <h2 class="mr-md-3">{{ course.title }}</h2>
                 </div>
 
-                <div class="d-flex flex-row">
-                  <!-- Instructor Dropdown -->
-                  <div class="dropdown btn-group">
-                    <a role="button" class="h3 font-weight-light text-tcf-orange mb-0"
+                <div class="instructor-row d-flex flex-sm-row flex-column align-items-baseline">
+
+                  <div class="instructor d-flex flex-row">
+                    <!-- Instructor page link -->
+                    <a class="align-self-center mr-3"
                        href="{% url 'instructor' instructor_id=instructor.id %}">
-                       {{ instructor.full_name }}</h3>
+                      <h4 class="m-0 text-tcf-indigo"
+                          tabindex="0" data-toggle="tooltip" data-placement="bottom"
+                          title="View instructor profile">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                      </h4>
                     </a>
-                    <!-- Store course ID here for jQuery -->
-                    <a role="button" class="btn dropdown-toggle dropdown-toggle-split mb-0"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      <span class="sr-only">Toggle Dropdown</span>
-                    </a>
-                    <div id="instructor" class="dropdown-menu dropdown-menu-right" disabled>
-                      <!-- To be populated by instr_data.js script -->
+
+                    <!-- Instructor Dropdown -->
+                    <div class="instructor-menu dropdown">
+                      <a class="instructor-select btn btn-lg text-tcf-orange p-0 dropdown-toggle" href="#"
+                         role="button" id="dropdownMenuLink" data-toggle="dropdown"
+                         aria-haspopup="true" aria-expanded="false">
+                         {{ instructor.full_name }}
+                      </a>
+
+                      <div id="instructorMenu" class="dropdown-menu w-100" aria-labelledby="dropdownMenuLink" disabled>
+                        <!-- To be populated by instr_data.js script -->
+                      </div>
                     </div>
                   </div>
 
                   <!-- Semester last taught -->
-                  <div class="ml-auto btn-group">
-                    <button class="btn bg-white disabled">Last taught</button>
-                    <button class="btn bg-tcf-blue text-white">{{ semester_last_taught }}</button>
+                  <div class="ml-auto pl-5 btn-group text-center">
+                    <span class="p-2 bg-white">Last taught</span>
+                    <span class="p-2 bg-tcf-blue text-white">{{ semester_last_taught }}</span>
                   </div>
                 </div>
             </div>
@@ -184,35 +194,36 @@
         </div>
 
         <div class="reviews-container mb-5 px-3">
-            <div class="reviews-toolbar d-flex flex-md-row flex-column justify-content-left justify-content-md-center">
-                <div class="reviews-header d-inline-flex">
-                    <h3 class="h2">{{ reviews|length }} Comments</h3>
-
-                </div>
-                <div class="ml-auto">
-                    <a href="{% url 'new_review' %}" class="btn bg-tcf-orange text-white mr-4">
+            <div class="reviews-toolbar pb-2 d-flex flex-md-row flex-column justify-content-left justify-content-md-center">
+                <h3 class="mb-0 mr-4">{{ reviews|length }} Comments</h3>
+                <div class="d-flex flex-sm-row flex-column col p-0">
+                    <a href="{% url 'new_review' %}" class="btn bg-tcf-orange text-white">
                       <i class="fa fa-plus" aria-hidden="true"></i> Add your review!
                     </a>
-                    <div class="dropdown btn-group">
-                        <button class="btn bg-white" disabled>Sort by</button>
-                        <button id="review-sort-select" class="btn btn-primary dropdown-toggle" type="button" id="sortOptions"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
-                        <div class="dropdown-menu" aria-labelledby="sortOptions">
-                            <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                Most Helpful
-                            </button>
-                            <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                Most Recent
-                            </button>
-                            <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                Highest Rating
-                            </button>
-                            <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
-                                Lowest Rating
-                            </button>
+                    {% if reviews %}
+                    <div class="ml-auto">
+                        <div class="dropdown btn-group ml-sm-4">
+                            <button class="btn bg-white" disabled>Sort by</button>
+                            <button id="review-sort-select" class="btn btn-primary dropdown-toggle" type="button" id="sortOptions"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+                            <div class="dropdown-menu" aria-labelledby="sortOptions">
+                                <button id="votes-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                    Most Helpful
+                                </button>
+                                <button id="recent-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                    Most Recent
+                                </button>
+                                <button id="highrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                    Highest Rating
+                                </button>
+                                <button id="lowrating-sort-btn" onclick="sortReviews(this.id)" class="dropdown-item" type="button">
+                                    Lowest Rating
+                                </button>
+                            </div>
                         </div>
                     </div>
                 </div>
+                {% endif %}
             </div>
             {% include "reviews/reviews.html" with reviews=reviews %}
         </div>
@@ -225,6 +236,11 @@
        var courseID = "{{ course_id|escapejs }}";
     </script>
     <script type="module" src="{% static 'course/javascript/instr_data.js' %}"></script>
+
+    <!-- For Bootstrap tooltip -->
+    <script>
+      $(function () { $('[data-toggle="tooltip"]').tooltip() })
+    </script>
 
     <!-- For grade data -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
