--- a/tcf_website/static/course/course_professor.css
+++ b/tcf_website/static/course/course_professor.css
@@ -1,3 +1,19 @@
+.course-instructor-header .instructor-menu .instructor-select{
+   font-size: 28px;
+}
+@media (max-width: 900px) {
+  .course-instructor-header .instructor-menu .instructor-select{
+    font-size: 22px;
+  }
+}
+
+/* Change tooltip alignment */
+@media (min-width: 768px) {
+  .tooltip-inner {
+      margin-left: 8.15rem;
+  }
+}
+
 .grades-ratings-container {
     width: 100%;
     height: 300px;
