--- a/tcf_website/static/course/course_professor.css
+++ b/tcf_website/static/course/course_professor.css
@@ -1,3 +1,22 @@
+/* Instructor info row */
+.course-instructor-header .instructor-info .instructor-select{
+   font-size: 28px;
+}
+@media (max-width: 900px) {
+  .course-instructor-header .instructor-info .instructor-select{
+    font-size: 22px;
+  }
+}
+.course-instructor-header .instructor-menu{
+   box-shadow: 1px 1px 10px rgba(0,0,0,0.2);
+}
+/* Change tooltip alignment */
+@media (min-width: 768px) {
+  .tooltip-inner {
+      margin-left: 8.15rem;
+  }
+}
+
 .grades-ratings-container {
     width: 100%;
     height: 300px;
@@ -115,7 +134,7 @@
     padding: 0;
 }
 .info-bar .progress-bar {
-    background-color: #56679d;
+    background-color: var(--secondary-color);
     margin: 0;
     padding: 0;
 }
