--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -37,6 +37,9 @@
 <body class="body">
   {% block body %}{% endblock %}
 
+  <!-- Login modal -->
+  {% include "login/login_modal.html" %}
+
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54T5TXX"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
