--- a/tcf_website/templates/login/login_button.html
+++ b/tcf_website/templates/login/login_button.html
@@ -4,8 +4,19 @@
 <link rel="stylesheet" href="{% static 'login/login_button.css' %}" />
 {% endblock %}
 
-<div class="login-button-container">
-    <a class="login-button-wrapper" href="{% url 'social:begin' 'google-oauth2' %}">
-        <button class="login-button"></button>
-    </a>
+<div class="login-button-container m-0">
+  {% with request.resolver_match.view_name as view_name %}
+    <!-- Redirect back to same page only if not on login error page -->
+    {% if view_name != 'tcf_website.views.auth.login_error' %}
+        <a class="login-button-wrapper"
+           href="{% url 'social:begin' 'google-oauth2' %}?next={{request.get_full_path}}">
+            <button class="login-button"></button>
+        </a>
+    {% else %}
+        <a class="login-button-wrapper"
+           href="{% url 'social:begin' 'google-oauth2' %}">
+            <button class="login-button"></button>
+        </a>
+    {% endif %}
+  {% endwith %}
 </div>
